--- a/APIConsumerMVC/Views/Employee/Index.cshtml
+++ b/APIConsumerMVC/Views/Employee/Index.cshtml
@@ -26,7 +26,7 @@
                         Details
                     </a>
                     <a href="/Employee/Edit/" class="btn btn-warning">Edit</a>
-                    <a href="/Employee/Delete/" class="btn btn-danger" onclick="return confirm('Are you sure?')">Delete</a>
+                    <a href="/Employee/Delete/@emp.Id" class="btn btn-danger" onclick="return confirm('Are you sure?')">Delete</a>
                 </td>
             </tr>
         }
