--- a/APIConsumerMVC/Views/Employee/Index.cshtml
+++ b/APIConsumerMVC/Views/Employee/Index.cshtml
@@ -25,7 +25,7 @@
                        href="/Employee/Details/@emp.Id">
                         Details
                     </a>
-                    <a href="/Employee/Edit/" class="btn btn-warning">Edit</a>
+                    <a href="/Employee/Edit/@emp.Id" class="btn btn-warning">Edit</a>
                     <a href="/Employee/Delete/@emp.Id" class="btn btn-danger" onclick="return confirm('Are you sure?')">Delete</a>
                 </td>
             </tr>
