--- a/APIConsumerMVC/Views/Department/Index.cshtml
+++ b/APIConsumerMVC/Views/Department/Index.cshtml
@@ -22,7 +22,7 @@
                 <td>@dept.EmpCount</td>
                 <td>
                     <a style="text-decoration: none; color:white; background-color:blueviolet; padding: 10px; border-radius: 5px; display:inline-grid; margin-top:5px;"
-                       href="/Employee/Details/@dept.DeptId">
+                       href="/Department/Details/@dept.DeptName">
                         Details
                     </a>
                     <a href="/Department/Edit/@dept.DeptId" class="btn btn-warning">Edit</a>
